# openreview

./: .gitignore  .openreview.yml  CHANGELOG.md  Doxyfile  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt
.azuredevops/: azure-pipelines.yml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  architecture.md  ci.md  configuration.md
src/openreview/: __init__.py  ai_reviewer.py  azure_devops.py  bootstrap.py  cli.py  config.py  diff_mapper.py  github_client.py  github_sync.py  gitlab_client.py  gitlab_sync.py  review_sync.py
src/openreview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/openreview/adapters/: __init__.py
src/openreview/adapters/model/: __init__.py  composition.py  runtime.py
src/openreview/adapters/scm/: __init__.py  composition.py  factory.py  runtime.py
src/openreview/application/: __init__.py  errors.py
src/openreview/application/commands/: __init__.py  run_review.py  sync_findings.py
src/openreview/application/services/: __init__.py  finding_pipeline.py  review_orchestrator.py  sync_orchestrator.py
src/openreview/config/: __init__.py  loader.py  schema.py
src/openreview/domain/: __init__.py
src/openreview/models/: __init__.py  runtime.py
src/openreview/ports/: __init__.py  model.py  scm.py
src/openreview/providers/: base.py  factory.py  runtime.py
src/openreview/reviewers/: __init__.py  base.py  registry.py  router.py
tests/: test_ai_reviewer.py  test_ai_reviewer_more.py  test_azure_devops.py  test_cli.py  test_cli_helpers.py  test_github_client.py  test_github_sync.py  test_gitlab_client.py  test_gitlab_sync.py  test_phase1_filters.py  test_review_sync.py  test_shim_exports.py
tests/openreview/: test_ai_reviewer.py  test_bootstrap.py  test_cli.py  test_cli_helpers.py  test_config.py  test_diff_mapper.py
tests/openreview/config/: test_loader.py
tests/openreview/providers/: test_factory.py  test_provider.py  test_providers_init.py
tests/openreview/reviewers/: test_registry.py  test_router.py
tools/: create_venv.ps1  create_venv.sh
(+63 files in other folders)
