[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
license-files = ["LICENSE"]
name = "openreview"
version = "0.1.0a1"
description = "AI-assisted PR review with comment synchronization, focused on Azure DevOps"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Ji Dong"}]
license = "MIT"
keywords = ["azure-devops", "pull-request", "review", "ai", "ci"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.8",
  "typer>=0.12",
  "rich>=13.7",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2.0",
  "twine>=5.0.0"
]

[project.scripts]
openreview = "openreview.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]


[project.urls]
Homepage = "https://github.com/djwinter29/openreview"
Repository = "https://github.com/djwinter29/openreview"
Issues = "https://github.com/djwinter29/openreview/issues"
